--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <title>exercice2</title>
 </head>
 <body>
